--- a/style.css
+++ b/style.css
@@ -1,13 +1,10 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=New+Amsterdam&display=swap');
 
 .new-amsterdam-regular {
     font-family: "New Amsterdam", system-ui;
     font-weight: 400;
     font-style: normal;
-  }
-
-
+}
 
 * {
     font-family: "New Amsterdam";
@@ -15,70 +12,59 @@
 
 body {
     background: url(./assets/euro-1353420_1280.jpg) center/cover no-repeat;
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
 }
 
 #Resultebox {
     background: url(./assets/save-up-4666418_1280.jpg) center/cover no-repeat;
     border: 4px outset black;
-    width: 70%;
-    height: 500px;
-    margin-right: 10%;
-    margin-left: 10%;
+    width: 90%;
+    max-width: 1200px;
+    height: 60vh;
+    margin: 2% auto;
+    padding: 5%;
     position: relative;
-    padding: 100px;
-    margin-bottom: 5px;
-    margin-top: 5px;
 }
 
 #Resulte {
-
-    font-size: 5rem;
+    font-size: 4rem;
     color: rgb(0, 0, 0);
     border: 4px outset rgb(0, 0, 0);
     background: rgba(0, 255, 0, 0.37);
-
+    padding: 1rem;
+    text-align: center;
 }
 
-#nombre1{
+#nombre1 {
    background: rgba(0, 0, 0, 0); 
 }
 
 #nombre {
-    
-    font-size: 5rem;
+    font-size: 4rem;
     text-align: center;
     color: rgb(0, 138, 46);
     background: rgba(0, 0, 0, 0.596);
     transition: 1s;
+    padding: 1rem;
 }
 
 #btns {
     background: url(./assets/dollars-499481_1280.jpg) center/cover no-repeat;
     border: 4px outset black;
-    width: 70%;
-    height: 100px;
-    margin: 290px;
-    position: relative;
-    padding: 100px;
+    width: 90%;
+    max-width: 1200px;
+    margin: 5% auto;
+    padding: 2%;
     text-align: center;
-    margin-top: 5px;
-    margin-right: 10%;
-    margin-left: 10%;
-    margin-bottom: 10px;
 }
 
-.button {
+.button, #calculer {
     height: 60px;
-    width: 150px;
-    font-size: 2.5rem;
-    letter-spacing: 5px;
-    margin-bottom: 10px;
-}
-
-#calculer {
-    height: 60px;
-    width: 200px;
-    font-size: 2.5rem;
+    width: 80%;
+    max-width: 200px;
+    font-size: 2rem;
     letter-spacing: 5px;
     margin-bottom: 10px;
 }
@@ -87,11 +73,11 @@ ul {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 0px;
+    padding: 0;
     background: rgba(0, 0, 0, 0.507);
     border: 5px outset black;
-    height: 100px;
-    font-size: 3rem;
+    height: 80px;
+    font-size: 2rem;
     list-style-type: none;
 }
 
@@ -99,6 +85,34 @@ p {
     background: rgba(0, 0, 0, 0.466);
     height: 60px;
     text-align: center;
-    font-size: 3rem;
+    font-size: 2rem;
     color: white;
+    padding: 1rem;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+    #Resultebox, #btns {
+        width: 100%;
+        padding: 10px;
+        margin: 2% auto;
+    }
+
+    #Resulte, #nombre {
+        font-size: 2.5rem;
+    }
+
+    .button, #calculer {
+        width: 100%;
+        font-size: 1.5rem;
+    }
+
+    ul {
+        font-size: 1.5rem;
+        height: 60px;
+    }
+
+    p {
+        font-size: 1.5rem;
+    }
 }
