--- a/style.css
+++ b/style.css
@@ -17,15 +17,24 @@ body {
     font-size: 100%;
 }
 
+h1 {
+    text-align: center;
+    font-size: 10rem;
+    color: rgb(255, 94, 0);
+    background: rgb(255, 185, 55);
+    position: relative;
+}
+
 #Resultebox {
     background: url(./assets/save-up-4666418_1280.jpg) center/cover no-repeat;
-    border: 4px outset black;
+    border: 10px outset rgb(163, 60, 0);
     width: 90%;
     max-width: 1200px;
     height: 60vh;
     margin: 2% auto;
     padding: 5%;
     position: relative;
+    transition: 0.7s;
 }
 
 #Resulte {
@@ -37,15 +46,10 @@ body {
     text-align: center;
 }
 
-#nombre1 {
-   background: rgba(0, 0, 0, 0); 
-}
-
 #nombre {
     font-size: 4rem;
     text-align: center;
-    color: rgb(214, 139, 0);
-    background: rgba(0, 0, 0, 0.596);
+    color: rgb(255, 174, 0);
     transition: 1s;
     padding: 1rem;
 }
@@ -69,6 +73,7 @@ body {
     margin-bottom: 10px;
     background-color: rgb(255, 166, 0);
     border: 10px outset black;
+    transition: 1s;
 }
 
 ul {
@@ -94,6 +99,10 @@ p {
 
 #nombre h2 {
     text-shadow: -2px 8px rgb(187, 90, 0);
+}
+
+h2 {
+    transition: 1s;
 }
 
 /* Media Queries */
