--- a/accueil.css
+++ b/accueil.css
@@ -11,10 +11,9 @@
 }
 
 body {
-    background: url(./assets/euro-1353420_1280.jpg) center/cover no-repeat;
-    margin: 0;
+    background: rgb(255, 174, 0);
     padding: 0;
-    font-size: 100%;
+    margin: 0;
 }
 
 #navbar {
@@ -39,6 +38,7 @@ ul {
 li {
     margin-right: 100px;
     margin-left: 100px;
+    transition: 2s;
 }
 
 h1 {
@@ -47,6 +47,7 @@ h1 {
     color: rgb(255, 94, 0);
     background: rgb(255, 185, 55);
     position: relative;
+    transition: 1s;
 }
 
 #Resultebox {
@@ -102,12 +103,13 @@ h1 {
 
 
 p {
-    background: rgba(0, 0, 0, 0.466);
+    background: rgba(0, 0, 0, 0.651);
     height: 60px;
     text-align: center;
     font-size: 2rem;
     color: white;
     padding: 1rem;
+    transition: 1s;
 }
 
 #nombre h2 {
