--- a/accueil.css
+++ b/accueil.css
@@ -101,7 +101,6 @@ h1 {
     transition: 1s;
 }
 
-
 p {
     background: rgba(0, 0, 0, 0.651);
     height: 60px;
@@ -121,10 +120,50 @@ h2 {
 }
 
 /* Media Queries */
+@media (max-width: 1024px) {
+    h1 {
+        font-size: 8rem;
+    }
+
+    #Resultebox {
+        height: 50vh;
+        padding: 3%;
+    }
+
+    #Resulte {
+        font-size: 3rem;
+    }
+
+    #nombre {
+        font-size: 3rem;
+    }
+
+    #btns {
+        padding: 3%;
+    }
+
+    .button, #calculer {
+        font-size: 1.8rem;
+    }
+
+    ul {
+        font-size: 1.8rem;
+    }
+
+    p {
+        font-size: 1.5rem;
+    }
+}
+
 @media (max-width: 768px) {
-    #Resultebox, #btns {
+    h1 {
+        font-size: 6rem;
+    }
+
+    #Resultebox {
         width: 100%;
-        padding: 10px;
+        height: 40vh;
+        padding: 2%;
         margin: 2% auto;
     }
 
@@ -144,5 +183,44 @@ h2 {
 
     p {
         font-size: 1rem;
+    }
+
+    li {
+        margin-right: 50px;
+        margin-left: 50px;
+    }
+}
+
+@media (max-width: 480px) {
+    h1 {
+        font-size: 4rem;
+    }
+
+    #Resultebox {
+        height: 30vh;
+        padding: 1%;
+    }
+
+    #Resulte, #nombre {
+        font-size: 2rem;
+    }
+
+    .button, #calculer {
+        font-size: 1.2rem;
+    }
+
+    ul {
+        font-size: 1.2rem;
+        height: 50px;
+    }
+
+    li {
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+
+    p {
+        font-size: 0.8rem;
+        padding: 0.5rem;
     }
 }
