--- a/accueil.css
+++ b/accueil.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=New+Amsterdam&display=swap');
 
+a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+#Utilitaries {
+    color: rgba(0, 255, 255, 0.507);
+}
+
 .new-amsterdam-regular {
     font-family: "New Amsterdam", system-ui;
     font-weight: 400;
@@ -11,7 +20,7 @@
 }
 
 body {
-    background: rgb(255, 174, 0);
+    background: url(./assets/background/background.png) no-repeat center/cover fixed;
     padding: 0;
     margin: 0;
 }
@@ -21,8 +30,8 @@ body {
     align-items: center;
     justify-content: space-around;
     padding: 0;
-    background: rgba(255, 0, 0, 0.288);
-    border: 5px outset black;
+    background: rgba(255, 255, 255, 0);
+    border: 5px outset rgba(0, 132, 255, 0);
     height: 80px;
     font-size: 2rem;
     list-style-type: none;
@@ -44,75 +53,21 @@ li {
 h1 {
     text-align: center;
     font-size: 10rem;
-    color: rgb(255, 94, 0);
-    background: rgb(255, 185, 55);
+    color: rgb(0, 204, 255);
+    background: rgba(0, 110, 255, 0.596);
     position: relative;
     transition: 1s;
 }
 
-#Resultebox {
-    background: url(./assets/save-up-4666418_1280.jpg) center/cover no-repeat;
-    border: 10px outset rgb(163, 60, 0);
-    width: 90%;
-    max-width: 1200px;
-    height: 60vh;
-    margin: 2% auto;
-    padding: 5%;
-    position: relative;
-    transition: 0.7s;
-}
-
-#Resulte {
-    font-size: 4rem;
-    color: rgb(0, 0, 0);
-    border: 4px outset rgb(0, 0, 0);
-    background: rgba(255, 194, 28, 0.37);
-    padding: 1rem;
-    text-align: center;
-}
-
-#nombre {
-    font-size: 4rem;
-    text-align: center;
-    color: rgb(255, 174, 0);
-    transition: 1s;
-    padding: 1rem;
-}
-
-#btns {
-    background: rgba(255, 68, 0, 0.384) center/cover no-repeat;
-    border: 7px outset black;
-    width: 90%;
-    max-width: 1200px;
-    margin: 5% auto;
-    padding: 2%;
-    text-align: center;
-}
-
-.button, #calculer {
-    height: 60px;
-    width: 80%;
-    max-width: 200px;
-    font-size: 2rem;
-    letter-spacing: 5px;
-    margin-bottom: 10px;
-    background-color: rgb(255, 166, 0);
-    border: 10px outset black;
-    transition: 1s;
-}
 
 p {
-    background: rgba(0, 0, 0, 0.651);
-    height: 60px;
+    background: rgba(0, 247, 255, 0.336);
+    height: 65px;
     text-align: center;
     font-size: 2rem;
     color: white;
     padding: 1rem;
     transition: 1s;
-}
-
-#nombre h2 {
-    text-shadow: -2px 8px rgb(187, 90, 0);
 }
 
 h2 {
