--- a/accueil.css
+++ b/accueil.css
@@ -20,7 +20,7 @@ a {
 }
 
 body {
-    background: url(./assets/background/background.png) no-repeat center/cover fixed;
+    background: url(./assets/background.png) no-repeat center/cover fixed;
     padding: 0;
     margin: 0;
 }
